--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ header{
     top: 0;
     position: fixed;
     z-index: 2;
+    transition: opacity .2s ease-in-out .1s;
 }
 .column-1{
     position: relative;
@@ -177,6 +178,7 @@ header{
     width: 100%;
     height: 100%;
     position: relative;
+    transition: bottom 0.3s ease-in-out;
 }
 .lef-bottom{
     position: absolute;
@@ -291,6 +293,11 @@ footer a:hover{
 }
 /*---------------end of footer------------------*/
 
+/*-----------new js for scroll observer---------*/
+.nav-scrolled{
+    opacity: 0;
+}
+/*-----------end of scroll observer---------*/
 
 
 
